--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Pompiere&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+
 @import "tailwindcss";
 
 :root {
@@ -10,6 +13,11 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-pompiere: "Pompiere";
+  --font-geist: "Geist";
+  --color-green: #426839;
+  --color-light-green: #587446;
+  --color-yellow: #d7cfac;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +28,5 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-green;
 }
